syntax = "proto3";

package author_books;

message Author {
    string author_name = 1;
}

message BookName {
    string book_name = 1;
}

message Book {
    Author author = 1;
    string book_name = 2;
    string book_description = 3;
    int32 book_price = 4;
}

/*
* FindBooks interface
*
* @rpc requestBooksByAuthor 
* @param Author object
* @return stream of Book objects
*
* @rpc requestBookByBookName
* @param BookName object
* @return Book object
*/
service FindBooks {
    rpc requestBooksByAuthor(Author) returns (stream Book) {};
    rpc requestBookByBookName(BookName) returns (Book) {};
}